horizontal scroll fix

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -8,6 +8,7 @@
 .lock-scroll {
   overflow: hidden;
 }
+html,
 body {
   background-color: #1e1e1e;
   overflow-x: hidden;
